# apertium-eng-gle

./: .gitattributes  ChangeLog  Makefile.am  README  README.md  apertium-en-ga.en-ga.dix  apertium-en-ga.en-ga.t1x  apertium-en-ga.ga-en.t1x  apertium-en-ga.ga.dix  apertium-en-ga.post-ga.dix  apertium-eng-gle.eng-gle.t2x  apertium-eng-gle.gle-eng.t2x  autogen.sh  configure.ac  gael-dis.rle  modes.xml
dev/: addin  addlen.pl  addpn.pl  adv.dix  cheap-eid.pl  iris-oifiguil  nomination.en  nomination.ga  nomination.url  pr.dix  public-domain-acts  public-domain-acts-raw  testp.dix  verb-bits
